--- a/.gitignore
+++ b/.gitignore
@@ -191,4 +191,4 @@ cython_debug/
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
-.cursorindexingignore
+.cursorindexingignoreAnaconda3-2022.05-Linux-x86_64.sh
