--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignoreAnaconda3-2022.05-Linux-x86_64.sh
+
+
+.Anaconda3-2022.05-Linux-x86_64.sh
